Fixed spacing a bit

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ nav {
 
 body {
   font-family: "Roboto";
-  max-width: 2500px;
+  max-width: 3000px;
   margin: auto;
   background: grey;
 
