--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -7,7 +7,6 @@
   padding-top: 5rem;
   margin-top: -5rem;
   height: 100vh;
-  max-height: 2000px;
   text-align: justify;
 }
 
@@ -20,7 +19,6 @@
   padding-top: 5rem;
   margin-top: -5rem;
   height: 100vh;
-  max-height: 2000px;
   text-align: justify;
 }
 
